# omr_grading_rpoject

./: name.py  omr_answer.py  omr_answer_logic.py  omr_answer_logic_gray.py  omr_answer_main.py  omr_answers.txt  omr_main.py  omr_name_id_main.py  omr_name_logic.py  omr_name_main.py  omr_student_id_logic.py  pyproject.toml  s.txt  utils.py
