[project]
name = "omr-grading-rpoject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "matplotlib>=3.10.3",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.1.0",
    "paddlepaddle>=3.1.0",
    "pytesseract>=0.3.13",
    "setuptools>=80.9.0",
]
